# wpsync

./: .gitignore  Pipfile  README.md  main.py  pyproject.toml  wpsync.py
tests/: test_cli.py  test_log.py
wpsync/: Mysqldump.php  __init__.py  __main__.py  backup.py  cli.py  cli_helpers.py  cli_new.py  cli_old.py  connection.py  host_info.py  import-sql-database-mysql.php  install.py  list_backups.py  log.py  persistent_dict.py  put.py  restore.py  rollback.py  server.py  server_template.php  utils.py  wpsync.py  wpsync_server.php
wpsync/cli/: __main__.py  args.py  printer.py
