[tool.poetry]
name = "wpsync"
version = "0.1.0"
description = "Synchronise WordPress sites across ssh, (s)ftp and local hosts"
authors = ["Emanuel Tannert <post@etannert.de>"]
license = "MIT"

[tool.poetry.scripts]
wpsync = "wpsync.cli:main"

[tool.poetry.dependencies]
python = "^3.7"
docopt = "~0.6.2"
schema = "~0.6.8"
sh = "~1.12.14"
requests = "~2.19.1"
sqlparse = "~0.2.4"
crayons = "~0.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
